# custom-erpnext

./: .coverage  .env.example  .eslintrc.json  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .prettierignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLEANUP_CHANGELOG.md  Dockerfile  Makefile  Procfile  README.md  __init__.py  _schema_reference.yaml  apps.txt  codecov.yml  commands.py  docker-compose.production.yml  eslint.config.js  fastmcp.json  fix_mariadb_patches.yaml  frappe-intellisense.json  frappe.sh  hooks.py  improvement_plan.csv  install.md  migration_script.sql  modules.txt  package-lock.json  package.json  pyproject.toml  schema_dependencies.md  schema_dependency_map.json  setup_script.py  (+5 more)
.codex/: patch.yaml  task_stage1.yaml  task_stage2.yaml  task_stage3.yaml  task_stage4.yaml  task_stage5.yaml
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml  pull_request_template.md
.pre-commit-cache/: db.db
_frappe_shadow_backup_1758619122/: __init__.py
config/: .env.integrations.example  common_site_config.json.example  nginx.conf  redis_cache.conf  redis_queue.conf  redis_socketio.conf  supervisor.conf
docs/: MASTER_AUDIT.md  SECURITY.md  audit_production_readiness.md  delivery_plan.md  fastmcp.md  full_erp_todo.md  index.md  infrastructure_and_ci.md  legacy_notes.md  roles_and_acl.md
env_ci/: pyvenv.cfg
ferum_custom/: __init__.py  autodoc.py  automation.py  cleanup.py  hooks.py  metrics.py  modules.txt  notifications_module.py  observability.py  patches.txt  permissions.py  settings.py  (+4 more)
(+728 files in other folders)
