[project]
name = "ferum_custom"
authors = [
    { name = "Ferum", email = "rusakov@ferumrus.ru"}
]
description = "Custom erp system for Ferum"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0", # Installed and managed by bench.
]

[project.optional-dependencies]
dev = [
	"pre-commit",
	"pytest",
	"pytest-cov>=6,<7",
	"coverage>=7",
]

[tool.pytest.ini_options]
addopts = "--cov=ferum_custom --cov-report=xml --cov-report=term-missing"
testpaths = [
    "ferum_custom",
    "telegram_bot",
]

[tool.coverage.run]
branch = true
source = ["ferum_custom", "telegram_bot"]
omit = [
    "ferum_custom/__init__.py",
    "ferum_custom/migrations/*",
    "ferum_custom/tests/*",
    "telegram_bot/__init__.py",
    "telegram_bot/migrations/*",
    "telegram_bot/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if t.TYPE_CHECKING:",
    "@override",
]
show_missing = true

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["ferum_custom", "telegram_bot"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
]
ignore = ["E101", "E203", "E402", "E501", "W191"]
typing-modules = ["frappe.types.DF"]

[tool.black]
line-length = 100
target-version = ["py312"]
skip-string-normalization = true
